# wasp-ss16-7

./: .gitignore  .gitmodules  README.md  result_node_group7.cpp
ardrone7/: data.bag  package.xml  setnet.sh
ardrone7/launch/: auto_and_keyboard_ctrl.launch
drone_regulator/: CMakeLists.txt  package.xml  setnet.sh
drone_regulator/launch/: ardrone.launch  auto_and_keyboard_ctrl.launch  tut_ardrone.launch
drone_regulator/src/: .simple.py.swp  simple.py  velctrl.py
task3_opencv/: CMakeLists.txt
task3_opencv/src/: april_tag_detection.cpp  april_tag_detection_turtlebot.cpp  shape_detection.py  shape_detection_drone.py
tbot_navigation/: CMakeLists.txt  package.xml
tbot_navigation/launch/: tbot_navigation_amcl.launch
tbot_navigation/src/: tbot_path_publisher.py  tbot_rviz_interaction.py
tbot_position/: CMakeLists.txt  package.xml
tbot_position/launch/: robot_pose_ekf.launch  tbot_position_ekf.launch
tbot_position/src/: tbot_position_publisher.py
